# wavenet-keyword-spotting

./: pyproject.toml  readme.md  requirements.txt
notebooks/: audioset_download.ipynb  colab_demo.ipynb  live_mic_detection.ipynb
wavenet/: dataset.py  detection.py  helpers.py  model.py  training.py
wavenet_kws/: dataset.py  detection.py  model.py  training.py
