[tool.poetry]
name = "wavenet_kws"
version = "1.0"
description = ""
authors = ["AndBondStyle <andbondstyle@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.7"
librosa = "^0.8.0"
youtube_dl = "2021.02.10"
pyrubberband = "^0.3.0"
python-slugify = "*"
requests = "*"
treelib = "*"
tqdm = "*"
pandas = "*"
retry = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
