[tool.poetry]
name = "wavenet_kws"
version = "1.0"
description = ""
authors = ["AndBondStyle <andbondstyle@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.7"
librosa = "^0.8.0"
youtube_dl = "2021.02.10"
pyrubberband = "^0.3.0"
python-slugify = "^4.0.1"
requests = "^2.25.1"
treelib = "^1.6.1"
tqdm = "^4.60.0"
pandas = "^1.2.4"
retry = "^0.9.2"
PySoundFile = "^0.9.0"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
